--- a/css/css.css
+++ b/css/css.css
@@ -8,6 +8,34 @@ body, html{
     max-width: 100vw;
   }
   
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #59a4a36d;
+  overflow: hidden;
+  font-family: 'Press Start 2P', cursive;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #59a4a3;
+  color: white;
+}
   body{
     background-color: black;
   }
@@ -26,11 +54,6 @@ body, html{
        
    }
 
-   .myNavbar{
-     height: 10%;
-     width: 100%;
-     background-color: #59a4a36d;
-   }
 
    .victory {
     font-family: 'Press Start 2P', cursive;
@@ -42,9 +65,6 @@ body, html{
     font-weight: 400;
   }
 
-  .navtext{
-    color: white;
-  }
 
   body:before{
     content: '';
